# graphRAG

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  _debugger.py  docker-compose.yml  graph_2d.html  main.py  pyproject.toml  requirements.txt  run.py
deploy/: Dockerfile  README_DEPLOY.md  docker-compose.neo4j.yml  docker-compose.qdrant.yml  docker-compose.yml
graphRAG/: indexing.py  querying.py  retrieval.py  visualization.py  visualizing.py
graphRAG/config/: setting.py
graphRAG/data/entities_extracted/: node_relationship.json
graphRAG/data/format_data/: elizabeth_i.json  sample.json
graphRAG/dataloaders/: loaders.py  preprocessors.py
graphRAG/graph/: extractor.py  retrival.py  storage.py
graphRAG/prompt/: prompts.py  prompts_vi.py
graphRAG/scripts/: indexing.sh  querying.sh
graphRAG/services/: extractor.py  queries.py  retrival.py  storage.py
graphRAG/utils/: preprocessors.py  utils.py
scripts/: indexing.sh  querying.sh  retrieval.sh  visualization.sh  visualizing.sh
src/: __init__.py  app.py  pipeline.py
src/api/: dependencies.py
src/api/routes/: backup.py  graph.py  indexing.py  querying.py
src/api/schemas/: requests.py  responses.py
src/config/: dataclass.py  datatype.py  schemas.py  setting.py
src/core/: factory.py  retrieval.py  storage.py
src/engines/: __init__.py  llm.py  qdrant.py  search.py
src/handler/: chunking.py  embed.py  extractor.py  queries.py  retrieval.py  storage.py
src/processing/: __init__.py  chunking.py  dataloaders.py  preprocessing.py
src/prompt/: ner.py  retrieval.py
src/prompts/: __init__.py  analysis.py  analysis_prompt.py  ner.py  ner_prompt.py  response.py  response_prompt.py
src/services/: dense_encoder.py  index_service.py  indexing.py  query_service.py  querying.py  retrieval.py  sparse_encoder.py  visualization.py  visualize_service.py
src/ui/: app.py
