[project]
name = "hybridrag"
version = "0.1.0"
description = "Hybrid Knowledge Graph RAG System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.15.0",
    "Pillow>=11.0.0,<12.0.0",
    "protobuf>=3.20.2,<6.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.0.24",
    "python-dotenv>=1.2.1",
    "regex>=2026.1.15",
    "underthesea>=8.3.0",
    "google-generativeai>=0.8.6",
    "python-docx>=1.2.0",
    "llama-index>=0.14.12",
    "tiktoken>=0.12.0",
    "neo4j>=6.1.0",
    "langchain>=1.2.3",
    "jinja2>=3.1.3",
    "langchain-openai>=1.1.7",
    "langchain-neo4j>=0.7.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "plotly>=6.5.2",
    "pyvis>=0.3.2",
    "wikipedia>=1.4.0",
    "streamlit>=1.53.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "fastembed>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]